# aieBootstrap

./: .gitignore  .gitmodules  Bootstrap.sln  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
.github/workflows/configs/: .vsconfig
bootstrap/: Application.cpp  Application.h  Audio.cpp  Audio.h  Bootstrap.vcxproj  Bootstrap.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  Game.cpp  Game.h  Gizmos.cpp  Gizmos.h  Input.cpp  Input.h  OBJMesh.cpp  OBJMesh.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SoundManager.cpp  SoundManager.h  Texture.cpp  Texture.h  imgui_glfw3.cpp  imgui_glfw3.h  tiny_obj_loader.h
bootstrap/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
dependencies/Mathlib/: Matrix3.h  Matrix4.h  Matrixs2.h  Vector2.h  Vector3.h  Vector4.h
dependencies/imgui/: stb_truetype.h
dependencies/include/assimp/: defs.h
dependencies/include/imgui/: imgui.h
project/: Application2D.cpp  Application3D.cpp  Application3D.h  Project.vcxproj  Project.vcxproj.filters  main.cpp
project2D/: Application2D.cpp  Application2D.h  CMakeLists.txt  Game2D.cpp  Game2D.h  Grid.cpp  Grid.h  Player.cpp  Player.h  Project2D.vcxproj  Project2D.vcxproj.filters  Snake.cpp  Snake.h  main.cpp
project3D/: Application3D.cpp  Application3D.h  CMakeLists.txt  Game3D.cpp  Game3D.h  Project3D.vcxproj  Project3D.vcxproj.filters  main.cpp
(+9 files in other folders)
